simplify article display style

--- a/twentysixteen/style.css
+++ b/twentysixteen/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Twenty Sixteen
+Theme Name: wechat-Twenty Sixteen
 Theme URI: https://wordpress.org/themes/twentysixteen/
 Author: the WordPress team
 Author URI: https://wordpress.org/
@@ -1546,6 +1546,7 @@ blockquote:after,
 }
 
 .site-main {
+	margin-top: 2.5em;
 	margin-bottom: 3.5em;
 }
 
@@ -1687,8 +1688,8 @@ blockquote:after,
 .entry-content,
 .entry-footer,
 .page-content {
-	margin-right: 7.6923%;
-	margin-left: 7.6923%;
+	margin-right: 2.6923%;
+	margin-left: 2.6923%;
 }
 
 .entry-title {
@@ -3602,12 +3603,14 @@ p > video {
 		width: 49px;
 	}
 
+	/*
 	body.no-sidebar:not(.search-results) article:not(.type-page) .entry-content {
 		float: left;
 		margin-right: -100%;
 		margin-left: 34.99999999%;
 		width: 50.00000001%;
 	}
+	*/
 
 	body.no-sidebar:not(.search-results) article:not(.type-page) .entry-footer {
 		margin-right: -100%;
